--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* Nested */
+@import url('./vendor/normalize.css');
+@import url('./vendor/fonts/fonts.css');
+/* @import url('./blocks/page/page.css');
+@import url('./blocks/header/header.css');
+@import url('./blocks/footer/footer.css');
+@import url('./blocks/profile/profile.css');
+@import url('./blocks/gallery/gallery.css');
+@import url('./blocks/card/card.css');
+@import url('./blocks/zoom/zoom.css');
+@import url('./blocks/popup/popup.css');
+@import url('./blocks/popup/_is-opened/popup_is-opened.css');
+@import url('./blocks/hover-style/hover-style.css'); */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* *{
+    outline: 1px solid red;
+} */
