--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,6 @@
 .app {
-  background: #000;
-  color: #fff;
-  font-family: 'Inter', Arial, sans-serif;
+  font-style: normal;
+  font-family: 'Roboto Slab', 'Inter', Arial, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
