--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* Nested */
 @import url('./vendor/normalize.css');
 @import url('./vendor/fonts/fonts.css');
-/* @import url('./blocks/page/page.css');
+/* 
 @import url('./blocks/header/header.css');
 @import url('./blocks/footer/footer.css');
 @import url('./blocks/profile/profile.css');
@@ -12,6 +12,6 @@
 @import url('./blocks/popup/_is-opened/popup_is-opened.css');
 @import url('./blocks/hover-style/hover-style.css'); */
 
-/* *{
+*{
     outline: 1px solid red;
-} */
+}
