--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,8 @@
 .app {
-  font-style: normal;
+  display: grid;
   font-family: 'Roboto Slab', 'Inter', Arial, sans-serif;
+  font-weight: normal;
+  font-style: normal;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
