--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,157 +1,165 @@
 .header {
-    background: url('../../images/background.png') center no-repeat;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     margin: 0;
-    padding: 0;
-    box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
-    width: 100%;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 24px;
-    text-decoration: none;
+    max-width: 100%;
+    padding: 0 104px; /* вынести */
+    background: url('../../images/background.png') center no-repeat;
+    background-size: cover;
     color: #FFF;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
 }
-.header_black {
-    box-shadow: inset 0px -1px 0px #D1D2D6;
+.header__content{
+    width: 608px;
+    min-height: auto;
+    margin: 80px auto;
+    padding: 0;
 }
-.header__logo {
-    margin: 0;
+.header__heading {
+    margin: 0 auto 32px;
+    font-family: 'Roboto Slab', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 60px;
+    line-height: 60px;
 }
-.header__logo_black {
-    color: #1A1B22;    
+.header__caption {
+    margin: 0 auto 64px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 24px;
 }
-
 .navigation {
     display: flex;
+    justify-content: space-between;
     min-height: 80px;
-    width: 100%;
+    max-width: 100%;
+    white-space: nowrap;
+    background: rgba(196, 196, 196, 0.01);
+    box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
+}
+.navigation__logo {
+    margin: 0;
+    flex-basis: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-family: Roboto Slab;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
 }
 .navigation__link {
+    margin: 0 15px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    text-align: center;
     text-decoration: none;
-    font-style: normal;
+    color:#FFF;
+    font-family: Roboto;
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color:#B6BCBF;
-    margin: 29px 34px 0 0;
-}
-
-.navigation__link_active-white {
-    box-shadow: inset 0px -3px 0px;
-    color: #FFFFFF;
-}
-.navigation__link:last-of-type {
-    margin-right: 0;
+    transition: all .5s;
 }
 .navigation__link:hover {
-    color: #FFFFFF;
+    box-shadow: 0 5px 0 #FFF;
 }
-.navigation__link_black {
-    color: #D1D2D6;    
-}
-.navigation__link_black:hover {
-    color: #1A1B22;    
-}
-.navigation__link_active-black {
-    box-shadow: inset 0px -3px 0px;
-    color: #1A1B22;
-}
-.navigation__auth-container {
-    display: flex;
-    padding: 12px;
-    align-self: center;
-    margin: 0 0 0 34px;
-    border: 1px solid #B6BCBF;
-    cursor: pointer;
-    border-radius: 100px;
-}
-.navigation__auth-container:hover {
-    border: 1px solid #FFFFFF;    
-}
-.navigation__auth-container_black {
+.navigation__link:last-child {
+    max-width: 100%;
+    margin: 19px 0 13px 15px;
+    padding: 0 12px;
     border: 1px solid #D1D2D6;
+    box-sizing: border-box;
+    border-radius: 100px;
+    cursor: pointer;
 }
-.navigation__auth-container_black:hover {
-    border: 1px solid #1A1B22;
+.navigation__link:last-child:hover {
+    box-shadow: 0 0 5px #FFF;
 }
-.navigation__logout-button {
-    font-family: 'Roboto', Arial, sans-serif;
+.navigation__name {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 24px;
+    margin-block-start: .7em;
+    margin-block-end: .7em;
+}
+.navigation__logout {
+    width: 24px;
+    min-height: 24px;
+    margin: 0 0 0 9px;
+    background: url('../../images/svg/logout-icon-white.svg') center no-repeat;
+    background-size: cover;
+}
+.search-form {
+    display: flex;
+    height: 64px;
+    margin: 0;
+    overflow: hidden;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 22px;
+    border-radius: 100px;
+    border: none;
+    background: #FFF;
+}
+.search-form__input {
+    width: 100%;
+    color: #1A1B22;
+    margin: 0 24px;
+    padding: 0;
+    border: none;
+}
+.search-form__input::placeholder {
+    color: #B6BCBF;
+}
+.search-form__input:focus {
+    outline: none;
+}
+.search-form__search-button {
+    width: 168px;
+    height: 64px;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: #FFFFFF;
-    margin: 0;
-    align-self: center;
+    background-color: #2F71E5;
+    color:#FFF;
+    box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
+    border-radius: 100px;
+    border: none;
 }
-.navigation__logout-button_black {
-    color: #1A1B22;
+.search-form__search-button:hover {
+    background-color: #347EFF;
+    cursor: pointer;
 }
-.navigation__logout-icon {
-    margin: auto 0 auto 10px;
+.search-form__search-button:active {
+    background-color: #2A65CC;
 }
-@media screen and (max-width: 768px) {
-    .navigation {
-        min-height: 66px;
+.search-form__search-button:focus {
+    outline: none;    
+}
+
+
+@media screen and (max-width: 800px) {
+    .header {
+        background: #FFF;
+        color:#1A1B22;
     }
     .navigation__link {
-        font-size: 16px;
-        line-height: 24px;
-        margin: 22px 16px 0 0;
+        color:#1A1B22;
     }
-    .navigation__auth-container {
-        padding: 8px;
-        margin: 0 0 0 16px;
-    }
-    .navigation__logout-button {
-        font-size: 16px;
-    }
-    .navigation__logout-icon {
-        margin: auto 0 auto 8px;
-    }
-}
-@media screen and (max-width: 630px) {
-    .navigation {
-        display: none;
-    }
-    .navigation-mobile {
-        display: flex;
-    }
-    .navigation__link {
-        font-size: 18px;
-        line-height: 56px;
-        color: #FFFFFF;
-        margin: 0;
-    }
-    .navigation__link_active-white {
-        box-shadow: none;
-    }
-    .navigation__link_active-black {
-        box-shadow: none;
-        color: #FFFFFF;
-    }
-    .navigation__link_black:hover {
-        color: #FFFFFF;  
-    }
-    .navigation__auth-container {
-        width: 100%;
-        padding: 15px 0;
-        margin: 22px 0 0;
-        justify-content: center;
-    }
-    .navigation__logout-button {
-        font-size: 18px;
-    }
-    .navigation__logout-icon {
-        margin: 0 0 0 10px;
-    }
-    .navigation__auth-container_black:hover {
-        border: 1px solid #FFFFFF;
-    }
-    .navigation__logout-button_black {
-        color: #FFFFFF;  
+    .navigation__logout {
+        background: url('../../images/svg/logout-icon-black.svg') center no-repeat;
     }
 }
