--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,14 @@
+.background{
+    background: url('../../images/background.png') center no-repeat;
+    background-size: cover;
+}
 .header {
+    grid-area: content;
     display: flex;
     flex-direction: column;
     margin: 0;
     max-width: 100%;
-    padding: 0 104px; /* вынести */
-    background: url('../../images/background.png') center no-repeat;
-    background-size: cover;
+    width: 100%;
     color: #FFF;
     font-family: Roboto;
     font-style: normal;
@@ -13,40 +16,20 @@
     font-size: 18px;
     line-height: 24px;
 }
-.header__content{
-    width: 608px;
-    min-height: auto;
-    margin: 80px auto;
-    padding: 0;
-}
-.header__heading {
-    margin: 0 auto 32px;
-    font-family: 'Roboto Slab', sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 60px;
-    line-height: 60px;
-}
-.header__caption {
-    margin: 0 auto 64px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-    line-height: 24px;
-}
 .navigation {
-    display: flex;
-    justify-content: space-between;
-    min-height: 80px;
+    width: 100%;
     max-width: 100%;
+    display: grid;
+    grid-template-columns: 1fr min-content min-content minmax(100px, min-content);
+    grid-template-rows:  80px;
     white-space: nowrap;
-    background: rgba(196, 196, 196, 0.01);
+    /* background: rgba(196, 196, 196, 0.01); */
     box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
 }
 .navigation__logo {
+    width: 100%;
+    max-width: 100%;
     margin: 0;
-    flex-basis: 100%;
     display: flex;
     align-items: center;
     text-align: center;
@@ -56,7 +39,7 @@
     line-height: 24px;
 }
 .navigation__link {
-    margin: 0 15px;
+    margin: 3px 15px 0;
     padding: 0;
     display: flex;
     align-items: center;
@@ -73,7 +56,8 @@
     box-shadow: 0 5px 0 #FFF;
 }
 .navigation__link:last-child {
-    max-width: 100%;
+    /* width: auto; */
+    /* max-width: auto; */
     margin: 19px 0 13px 15px;
     padding: 0 12px;
     border: 1px solid #D1D2D6;
@@ -85,7 +69,6 @@
     box-shadow: 0 0 5px #FFF;
 }
 .navigation__name {
-    max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
     line-height: 24px;
@@ -93,25 +76,54 @@
     margin-block-end: .7em;
 }
 .navigation__logout {
-    width: 24px;
+    min-width: 24px;
     min-height: 24px;
     margin: 0 0 0 9px;
     background: url('../../images/svg/logout-icon-white.svg') center no-repeat;
     background-size: cover;
 }
-.search-form {
+.header__content{
     display: flex;
+    max-width: 608px;
+    width: 100%;
+    margin: 80px auto;
+    padding: 0;
+    align-items: center;
+    flex-direction: column;
+}
+.header__heading {
+    max-width: 100%;
+    margin: 0 auto 32px;
+    font-family: 'Roboto Slab', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 60px;
+    line-height: 60px;
+}
+.header__caption {
+    max-width: 100%;
+    margin: 0 auto 64px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 24px;
+}
+.search-form {
+    width: 100%;
+    max-width: 100%;
     height: 64px;
+    background: #FFF;
+    display: flex;
     margin: 0;
     overflow: hidden;
     font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
+    /* font-style: normal;
+    font-weight: normal; */
     font-size: 16px;
     line-height: 22px;
     border-radius: 100px;
     border: none;
-    background: #FFF;
 }
 .search-form__input {
     width: 100%;
@@ -149,7 +161,6 @@
 .search-form__search-button:focus {
     outline: none;    
 }
-
 
 @media screen and (max-width: 300px) {
     .header {
