--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 @import url('./blocks/popup/popup.css');
 @import url('./blocks/popup/_is-opened/popup_is-opened.css');
 @import url('./blocks/hover-style/hover-style.css'); */
-
+/* 
 *{
     outline: 1px solid red;
-}
+} */
