--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,9 @@
 .app {
   /* max-width: 100%;
-  width: 100%; */
+  width: 100%; 
+  display: flex;
+  flex-direction: column;*/
+  min-height: 100vh;
   font-family: 'Roboto Slab', 'Inter', Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
