--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,39 +4,64 @@
 }
 .header {
     grid-area: content;
+    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
     margin: 0;
-    max-width: 100%;
-    width: 100%;
+    /* align-items: center; */    /* flex-shrink: 0; */
     color: #FFF;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
-    line-height: 24px;
+    line-height: 24px; 
 }
-.navigation {
-    width: 100%;
-    max-width: 100%;
-    display: grid;
-    grid-template-columns: 1fr min-content min-content minmax(100px, min-content);
-    grid-template-rows:  80px;
+
+.header__menu {
+    position: relative;
+    /* width: 100%;
+    max-width: 100%; 
+    justify-content: space-between;*/
+    display: flex;
     white-space: nowrap;
-    /* background: rgba(196, 196, 196, 0.01); */
+}
+.header__menu::before {
+    /* это та полоска */
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 1px;
+    /* opacity: .8; */
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    top: 80px;
+    background: rgba(196, 196, 196, 0.01);
     box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
 }
-.navigation__logo {
-    width: 100%;
-    max-width: 100%;
+.header__logo {
     margin: 0;
-    display: flex;
+    display: flex;    /* для выравнивания по верт */
     align-items: center;
     text-align: center;
     font-family: Roboto Slab;
     font-weight: 700;
     font-size: 20px;
     line-height: 24px;
+}
+.header__burger {
+    display: none;
+}
+.navigation {
+    width: 100%;
+    max-width: 100%;
+    justify-content: end;
+    display: grid;
+    grid: 80px / min-content min-content minmax(100px, min-content);
 }
 .navigation__link {
     margin: 3px 15px 0;
@@ -56,8 +81,10 @@
     box-shadow: 0 5px 0 #FFF;
 }
 .navigation__link:last-child {
-    /* width: auto; */
-    /* max-width: auto; */
+    width: fit-content;
+    width: calc(100% - 20px);
+    display: flex;
+    align-items: center;
     margin: 19px 0 13px 15px;
     padding: 0 12px;
     border: 1px solid #D1D2D6;
@@ -69,16 +96,20 @@
     box-shadow: 0 0 5px #FFF;
 }
 .navigation__name {
+    /* white-space: nowrap; */
+    width: fit-content;
+    max-width: 100%;
+    margin: 0 0 0 auto;
     overflow: hidden;
     text-overflow: ellipsis;
     line-height: 24px;
     margin-block-start: .7em;
     margin-block-end: .7em;
 }
-.navigation__logout {
+.navigation__logout-image {
     min-width: 24px;
     min-height: 24px;
-    margin: 0 0 0 9px;
+    margin: 0 auto 0 9px;
     background: url('../../images/svg/logout-icon-white.svg') center no-repeat;
     background-size: cover;
 }
@@ -91,7 +122,7 @@
     align-items: center;
     flex-direction: column;
 }
-.header__heading {
+.header__title {
     max-width: 100%;
     margin: 0 auto 32px;
     font-family: 'Roboto Slab', sans-serif;
@@ -108,6 +139,103 @@
     font-style: normal;
     font-size: 18px;
     line-height: 24px;
+}
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 760px) {    
+    .header__menu::before {
+        width: calc(100% + 40px);
+        padding: 0 14px;
+    }
+    .navigation{
+        width: 100%;
+        max-width: 100%;
+        display: grid;
+        z-index: -1;
+        grid:  repeat(3, 60px) / minmax(min-content, 100%);
+    }
+    .navigation__link{
+        margin: 0;
+    }
+    .navigation__link:last-child {
+        margin: 0 auto;
+        min-width: 288px;
+        width: fit-content;
+        max-width: 100%;
+    }
+    .navigation__link:hover {
+        box-shadow: none;
+        opacity: .8;
+    }
+    .navigation__auth-btn{
+        margin: 0 auto;
+    }
+    body.lock{ /* это что, придется стейт выносить в самый верх ?! позже */
+        overflow: hidden;
+    }
+    .header__burger{
+        display: block;
+        position: relative;
+        width: 17px;
+        height: 14px;
+        transition: all .5s ease 0s;
+        cursor: pointer;
+    }
+    .header__burger::before,
+    .header__burger::after{
+        content: "";
+        position: absolute;
+        background-color: #FFF;
+        width: 100%;
+        height: 2px;
+        left: 0;
+    }
+    .header__burger::before{
+        top: 3px;
+    }
+    .header__burger::after{
+        bottom: 3px;
+    }
+    .header__burger.active::before{
+        transform: rotate(-45deg);
+        top: 5px;
+    }
+    .header__burger.active::after{
+        transform: rotate(45deg);
+        top: 5px;
+    }
+    .header__menu{
+        display: grid;
+        grid: 80px 0 / 100%;
+    }
+    .header__logo {
+        width: 100%;
+        justify-content: space-between;
+        max-width: 100%;
+        font-family: Roboto Slab;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .header__menu.active{
+        grid-template-rows: 80px auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: calc(100% - 32px);
+        background: #1A1B22;
+        /* background: transparent; */
+        border-radius: 16px;
+        padding: 0 16px 24px;
+    } 
 }
 .search-form {
     width: 100%;
@@ -160,17 +288,4 @@
 }
 .search-form__search-button:focus {
     outline: none;    
-}
-
-@media screen and (max-width: 300px) {
-    .header {
-        background: #FFF;
-        color:#1A1B22;
-    }
-    .navigation__link {
-        color:#1A1B22;
-    }
-    .navigation__logout {
-        background: url('../../images/svg/logout-icon-black.svg') center no-repeat;
-    }
 }
