--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,8 @@
   /* max-width: 100%;
   width: 100%; 
   display: flex;
-  flex-direction: column;*/
+  flex-direction: column;
+  background: tomato;*/
   min-height: 100vh;
   font-family: 'Roboto Slab', 'Inter', Arial, sans-serif;
   font-weight: normal;
