--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,31 +17,28 @@
     font-size: 18px;
     line-height: 24px; 
 }
-
 .header__menu {
     position: relative;
-    /* width: 100%;
-    max-width: 100%; 
-    justify-content: space-between;*/
+    width: 100%;
+    max-width: 100%;
     display: flex;
     white-space: nowrap;
 }
 .header__menu::before {
-    /* это та полоска */
     position: absolute;
     content: '';
     width: 100%;
     height: 1px;
-    /* opacity: .8; */
+    top: 80px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
     -o-transform: translateX(-50%);
     transform: translateX(-50%);
-    top: 80px;
     background: rgba(196, 196, 196, 0.01);
     box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
+    background: rgba(196, 196, 196, 1);
 }
 .header__logo {
     margin: 0;
@@ -81,8 +78,8 @@
     box-shadow: 0 5px 0 #FFF;
 }
 .navigation__link:last-child {
-    width: fit-content;
-    width: calc(100% - 20px);
+    width: calc(100% - 20px);  /* ширина кнопки. fit-content не переполнить */
+    max-width: 100%;
     display: flex;
     align-items: center;
     margin: 19px 0 13px 15px;
@@ -96,9 +93,8 @@
     box-shadow: 0 0 5px #FFF;
 }
 .navigation__name {
-    /* white-space: nowrap; */
-    width: fit-content;
-    max-width: 100%;
+    /* width: fit-content; */
+    max-width: 100%;     /* ширина параграфа, он спрятан, но оно есть.. */
     margin: 0 0 0 auto;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -141,33 +137,92 @@
     line-height: 24px;
 }
 
-
-
-
-
-
-
-
-
-@media screen and (max-width: 760px) {    
-    .header__menu::before {
-        width: calc(100% + 40px);
-        padding: 0 14px;
+.search-form {
+    width: 100%;
+    max-width: 100%;
+    min-height: 64px;
+    background: #FFF;
+    display: flex;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    /* font-style: normal;
+    font-weight: normal; */
+    font-size: 16px;
+    line-height: 22px;
+    border-radius: 1000px;
+    /* border: none; */
+}
+.search-form__input {
+    width: 100%;
+    color: #1A1B22;
+    margin: 0 24px;
+    padding: 0;
+    border: none;
+    /* overflow: hidden; */
+}
+.search-form__input::placeholder {
+    color: #B6BCBF;
+}
+.search-form__input:focus {
+    outline: none;
+}
+.search-form__search-button {
+    width: 168px;
+    height: 64px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    background-color: #2F71E5;
+    color:#FFF;
+    box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
+    border-radius: 100px;
+    border: none;
+    /* display: none; */
+}
+.search-form__search-button:hover {
+    background-color: #347EFF;
+    cursor: pointer;
+}
+.search-form__search-button:active {
+    background-color: #2A65CC;
+}
+.search-form__search-button:focus {
+    outline: none;    
+}
+@media screen and (max-width: 760px) {
+    .search-form {
+        flex-direction: column;
+        text-overflow: ellipsis;
+        border-radius: unset;
+        background: transparent;
+    }
+    .search-form__input {
+        width: calc(100% - 32px);
+        height: 56px;
+        padding: 0 16px;
+        margin: 0 0 16px;
+        background: #FFF;
+        border-radius: 100px;
+    }
+    .search-form__search-button {
+        width: 100%;
+        height: 56px;
+        border-radius: 100px;
     }
     .navigation{
-        width: 100%;
-        max-width: 100%;
         display: grid;
         z-index: -1;
-        grid:  repeat(3, 60px) / minmax(min-content, 100%);
+        grid:  repeat(3, 60px) / 100%;        /* = width: 100%; */
+        max-width: 100%;
     }
     .navigation__link{
         margin: 0;
+        width: fit-content; 
     }
     .navigation__link:last-child {
         margin: 0 auto;
         min-width: 288px;
-        width: fit-content;
         max-width: 100%;
     }
     .navigation__link:hover {
@@ -212,18 +267,13 @@
         top: 5px;
     }
     .header__menu{
-        display: grid;
-        grid: 80px 0 / 100%;
-    }
-    .header__logo {
         width: 100%;
-        justify-content: space-between;
-        max-width: 100%;
-        font-family: Roboto Slab;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 16px;
-        line-height: 24px;
+        display: grid;
+        grid: 80px 0 / 100%;        /* ????? 100 иначе уедет влево */
+    }
+    .header__menu::before {
+        width: calc(100% + 0px);
+        padding: 0 14px;
     }
     .header__menu.active{
         grid-template-rows: 80px auto;
@@ -235,57 +285,15 @@
         /* background: transparent; */
         border-radius: 16px;
         padding: 0 16px 24px;
-    } 
-}
-.search-form {
-    width: 100%;
-    max-width: 100%;
-    height: 64px;
-    background: #FFF;
-    display: flex;
-    margin: 0;
-    overflow: hidden;
-    font-family: 'Roboto', sans-serif;
-    /* font-style: normal;
-    font-weight: normal; */
-    font-size: 16px;
-    line-height: 22px;
-    border-radius: 100px;
-    border: none;
-}
-.search-form__input {
-    width: 100%;
-    color: #1A1B22;
-    margin: 0 24px;
-    padding: 0;
-    border: none;
-}
-.search-form__input::placeholder {
-    color: #B6BCBF;
-}
-.search-form__input:focus {
-    outline: none;
-}
-.search-form__search-button {
-    width: 168px;
-    height: 64px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 24px;
-    background-color: #2F71E5;
-    color:#FFF;
-    box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.2);
-    border-radius: 100px;
-    border: none;
-}
-.search-form__search-button:hover {
-    background-color: #347EFF;
-    cursor: pointer;
-}
-.search-form__search-button:active {
-    background-color: #2A65CC;
-}
-.search-form__search-button:focus {
-    outline: none;    
+    }
+    .header__logo {
+        width: 100%;
+        justify-content: space-between;
+        max-width: 100%;
+        font-family: Roboto Slab;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 24px;
+    }
 }
