--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -14,7 +14,7 @@
   width: 100%;
   display: flex;
   margin: 24px 0;
-  padding: 0;
+  padding-bottom: 24px;
   font-size: 16px;
   line-height: 22px;
   color: #B6BCBF;
