--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,5 +1,4 @@
 .about {
-  grid-area: content;
   display: grid;
   max-width: 100%;
   padding: 80px 0;
@@ -20,6 +19,7 @@
   margin: 0;
   font-style: normal;
   font-weight: 400;
+  justify-self: start;
 }
 .about__heading {
   margin: 24px 0 0;
@@ -43,5 +43,11 @@
   .about {
     padding: 30px 0 100px;
     grid: min-content  min-content / auto;
+  }
+}
+
+@media screen and (min-width: 1220px) {
+  .about {
+    padding: 40px 10% 40px 0;
   }
 }
