--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
 .background {
+  /* background: url("../../images/bkgd-horiz.svg") center no-repeat; */
   background: url("../../images/bkgd-horiz.png") center no-repeat;
   background-size: cover;
 }
@@ -6,6 +7,7 @@
   .background {
     background: url("../../images/background.png") top no-repeat;
     background-size: cover;
+    /* background-position-y: -56px; */
   }
 }
 .header {
@@ -19,8 +21,6 @@
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
-  line-height: 24px; 
-  line-height: 24px; 
   line-height: 24px; 
 }
 .header__menu {
@@ -60,6 +60,13 @@
 }
 .header__burger {
   display: none;
+  background-color: transparent;
+  outline: none;
+  padding: 0;
+  border: none;
+}
+.header__burger:focus {
+  outline: none;
 }
 .navbar__link {
   margin: 3px 15px 0;
@@ -68,7 +75,7 @@
   align-items: center;
   text-align: center;
   text-decoration: none;
-  color:#FFF;
+  color: inherit;
   font-family: Roboto;
   font-weight: 500;
   font-size: 18px;
@@ -76,12 +83,14 @@
   transition: all .5s;
   flex: 0 0;
 }
-.navbar__link:hover {
+.navbar__link_wunderlined {
   box-shadow: 0 5px 0 #fff;
+}
+.navbar__link_bunderlined {
+  box-shadow: 0 5px 0 #000;
 }
 .navbar__auth-btn {
   max-width: calc(100vw - 700px);
-  /* ширина кнопки. fit-content не переполнить */
   width: fit-content;
   display: flex;
   align-items: center;
@@ -90,15 +99,17 @@
   border: 1px solid #D1D2D6;
   box-sizing: border-box;
   border-radius: 100px;
+  background-color: transparent;
+  outline: none;
   cursor: pointer;
   flex: 0 2;
+  color: inherit;
 }
 .navbar__auth-btn:hover {
   box-shadow: 0 0 5px #fff;
 }
 .navbar__name {
-  /* width: fit-content; */
-  max-width: 100%; /* ширина параграфа, он спрятан, но оно есть.. */
+  max-width: 100%;
   margin: 0 0 0 auto;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -106,12 +117,25 @@
   margin-block-start: 0.7em;
   margin-block-end: 0.7em;
 }
-.navbar__logout-image {
+.navbar__auth-name {
+  margin: 0 ;
+  line-height: 24px;
+  margin-block-start: 0.7em;
+  margin-block-end: 0.7em;
+  color: inherit;
+}
+.navbar__logout-image{
   min-width: 24px;
   min-height: 24px;
   margin: 0 auto 0 9px;
   background: url('../../images/svg/logout-icon-white.svg') center no-repeat;
   background-size: cover;
+}
+.navbar__logout-image_black {
+  background: url('../../images/svg/logout-icon-black.svg') center no-repeat;
+}
+.navbar__logout-image_black.active {
+  background: url('../../images/svg/logout-icon-white.svg') center no-repeat;
 }
 
 @media screen and (max-width: 1020px) {
@@ -120,6 +144,12 @@
   }
 }
 @media screen and (max-width: 760px) {
+  .navbar__link_wunderlined {
+    box-shadow: none;
+  }
+  .navbar__link_bunderlined {
+    box-shadow: none;
+  }
   .header__burger {
     display: block;
     position: relative;
@@ -138,6 +168,10 @@
     height: 2px;
     left: 0;
   }
+  .header__burger_black::before,
+  .header__burger_black::after {
+    background-color: #000;
+  }
   .header__burger::before {
     top: 3px;
   }
@@ -152,18 +186,28 @@
     transform: rotate(45deg);
     top: 5px;
   }
+  .header__burger.active::before,
+  .header__burger.active::after {
+    background-color: #fff;
+  }
 }
+.header_black{
+  color:#000;
+}
+
 @media screen and (max-width: 760px) {
   .header {
     position: fixed;
     top: 0; 
     left: 0;
     width: 100%;
+    z-index: 1;
   }
   .header::after {
     top: 56px;
     left: 52%;
-    width: calc(100% + 2.5*16px);
+    width: calc(100% + 2*16px + 88px);
+    /* полосочка на всю ширину */
     background: rgba(196, 196, 196, .1);
     z-index: 3;
   }
@@ -174,28 +218,50 @@
     top: 0;
     left: 0;
     height: 100%;
-    /* background-color: green; */
     height: 56px;
-    background: url("../../images/background.png") top no-repeat;
+    background: url("../../images/background-h.png") top no-repeat;
+    /* background: url("../../images/background.svg") top no-repeat; */
+    /* при png качество капец дичь ((((( UI !!!!!*/
+    /* filter: blur(5px); */
     background-size: cover; 
     z-index: 1;
+  }
+  .header_black{
+    position: static;
+    position: relative;
+    left: -16px;
+    color:#000;
+    width: 100vw;
+    max-width: 100vw;
+  }
+  .header_black::before{
+    background: none;
+    top:0px;
+    width: calc(100%);
+    max-width: 100vw;
+  }
+  .header_black::after {
+    width: 100%;
+    width: calc(100% + 32px);
+    /* left: 55%; */
   }
   .header__menu {
     position: absolute;
     top: -700%;
     left: 0;
-    width: 100%;
+    max-width: calc(100% );
     display: flex;
     margin: 0 ;
-    padding: 0 ;
     flex-direction: column;
     z-index: 1;
     background: #1a1b22;
     border-radius: 0 0 16px 16px;
-    padding: 0 16px 24px;
   }
   .header__menu.active {
     top: 0;
+    padding: 0 16px 24px;
+    max-width: calc(100% );
+    /* width: calc(100% - 32px); */
   }
   .header__logo {
     margin: 14px auto 14px 16px;
@@ -203,7 +269,6 @@
     max-width: 100%;
     display: flex;
     justify-content: space-between;
-    /* justify-self: center; */
     font-family: Roboto Slab;
     font-style: normal;
     font-weight: bold;
@@ -219,8 +284,10 @@
     margin: 0  0 35px;
   }
   .navbar__link:hover {
-    box-shadow: none;
     opacity: 0.8;
+  }
+  .navbar__link_underlined {
+    box-shadow: none;
   }
   .navbar__auth-btn {
     margin: 0 auto;
@@ -235,4 +302,71 @@
     /* это что, придется стейт выносить в самый верх ?! позже */
     /* overflow: hidden; */
   /* } */
+}
+
+.saved-news{
+  width: 100%;
+}
+.saved-news__header {
+  padding: 40px 104px 56px;
+  background-color: #fff;
+}
+
+.saved-news__subtitle {
+  color: rgba(26, 27, 34, 0.5);
+  margin-bottom: 28px;
+}
+
+.saved-news__title {
+  font-family: "Roboto-Slab", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.15;
+  max-width: 530px;
+  margin: 0 0 30px;
+}
+
+.saved-news__span {
+  font-weight: 600;
+}
+
+@media screen and (max-width: 760px) {
+  .saved-news{
+    width: 100%;
+    /* padding: calc(56px +30px) 0 0; */
+  }
+  .saved-news__header {
+    padding: 24px 40px 32px;
+  }
+  .saved-news__subtitle {
+    font-size: 14px;
+    line-height: 24px; 
+    margin-bottom: 16px;
+  }
+  .saved-news__title {
+    font-size: 30px;
+    line-height: 34px;
+    min-width: 336px;
+    margin: 0 0 16px;
+  }
+  .saved-news__keywords {
+    font-size: 14px;
+    line-height: 24px; 
+    margin: 0 0 32px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .saved-news__subtitle {
+    font-size: 12px;
+    line-height: 2;
+  }
+
+  .saved-news__title {
+    min-width: 288px;
+  }
+
+  .saved-news__keywords {
+    min-width: 288px;
+  }
 }
