--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,11 +1,10 @@
 .main {
-  background: #F5F6F7;
 }
 @media screen and (max-width: 1020px) {
   .main {
     width: 100%;
     min-height: 282px;
-    white-space: nowrap;
-    overflow: hidden;
+    /* white-space: nowrap; */
+    /* overflow: hidden; */
   }
 }
