--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -3,6 +3,8 @@
   overflow: hidden;
   border-radius: 20px;
   background-color: #fff;
+  /* display: flex;
+  justify-content: space-between; */
 }
 .card__image {
   min-width: 100%;
@@ -62,10 +64,10 @@
 .card__button_add:hover {
   background-image: url(../../images/svg/add-button-black.svg);
 }
-.card__button_trash {
+.card__button_delete {
   background-image: url(../../images/svg/bin.svg);
 }
-.card__button_trash:hover {
+.card__button_delete:hover {
   background-image: url(../../images/svg/bin-black.svg);
 }
 .card__keyword-container {
@@ -87,10 +89,10 @@
   color: #000000;
   align-self: center;
 }
-.card__info {
-  display: flex;
-  flex-direction: column;
-  height: 230px;
+.card__text {
+  /* display: flex;
+  flex-direction: column; */
+  min-height: 230px;
   margin: 20px 24px 0;
   color: #1a1b22;
 }
@@ -103,7 +105,7 @@
   line-height: 24px;
   color: #b6bcbf;
 }
-.card__heading {
+.card__title {
   font-family: "Roboto Slab", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -140,9 +142,9 @@
   color: #b6bcbf;
   margin: 10px 24px 24px;
 }
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 1020px) {
   .card__image {
-    height: 180px;
+    height: 150px;
   }
   .card__heading {
     -webkit-line-clamp: 2;
@@ -150,51 +152,12 @@
   .card__description {
     -webkit-line-clamp: 3;
   }
-  .card__info {
-    height: 180px;
+  .card__text {
+    min-height: 180px;
   }
 }
-@media screen and (max-width: 868px) {
-  .card__image {
-    height: 150px;
-  }
-  .card__sourse {
-    margin: 12px 16px 16px;
-  }
-  .card__button-container {
-    top: 8px;
-    right: 8px;
-  }
-  .card__button-container_main:hover .card__button-info-container {
-    font-size: 9px;
-    line-height: 11px;
-  }
-  .card__button-container_saved-news:hover .card__button-info-container {
-    font-size: 13px;
-    line-height: 15px;
-  }
-  .card__button-info-container {
-    margin-right: 3px;
-  }
-  .card__keyword-container {
-    left: 8px;
-    top: 8px;
-  }
-  .card__info {
-    margin: 16px 16px 0;
-    height: 206px;
-  }
-  .card__heading {
-    font-size: 21px;
-    line-height: 24px;
-    -webkit-line-clamp: 3;
-  }
-  .card__description {
-    margin: 10px 0 0;
-    -webkit-line-clamp: 4;
-  }
-}
-@media screen and (max-width: 680px) {
+
+@media screen and (max-width: 768px) {
   .card__image {
     height: 196px;
   }
@@ -217,17 +180,17 @@
     left: 16px;
     top: 16px;
   }
-  .card__info {
+  .card__text {
     margin: 16px 16px 0;
-    height: 184px;
+    min-height: 184px;
   }
-  .card__heading {
+  .card__title {
     margin: 10px auto 0 0;
     -webkit-line-clamp: 2;
     font-size: 22px;
     line-height: 26px;
   }
   .card__sourse {
-    margin: 8px 16px 16px;
+    margin: auto 16px 16px;
   }
 }
