--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -2,8 +2,29 @@
   display: flex;
   flex-direction: column;
   background: #f5f6f7;
-  padding: 0 104px 0;
 }
+.card-list {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 104px;
+}
+/* @media screen and (max-width: 1020px){
+  .card-list {
+    padding: 0 40px;
+  }
+  .card-list__container {
+    grid: 420px / repeat(auto-fill, 224px);
+    grid-auto-flow: row;
+    grid-auto-rows: 420px;
+  }
+} */
+@media screen and (max-width: 760px){
+  .card-list {
+    padding: 0 16px;
+  }
+}
+
 .card-list__header {
   font-family: "Roboto Slab", Arial, sans-serif;
   font-style: normal;
@@ -15,15 +36,17 @@
 }
 .card-list__container {
   display: grid;
-  grid-template-columns: repeat(3, 400px);
-  grid-template-rows: repeat(auto, 576px);
+  justify-content: center;
+  grid: 576px / repeat(auto-fill, 400px);
+  grid-auto-flow: row;
+  grid-auto-rows: 576px;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  grid-gap: 10px;
-  margin: 64px auto;
+  gap: 16px;
+  margin: 64px 0;
 }
-.card-list__show-button {
+.card-list__button {
   border: none;
   background: #fff;
   border-radius: 80px;
@@ -38,7 +61,7 @@
   color: #1a1b22;
   outline: none;
 }
-.card-list__show-button:hover {
+.card-list__button:hover {
   cursor: pointer;
   background: #e6e8eb;
 }
@@ -72,70 +95,27 @@
   color: #b6bcbf;
   margin: 16px auto 0;
 }
-@media screen and (max-width: 1150px) {
-  .card-list {
-    padding: 0 40px 0;
-  }
-}
+
 @media screen and (max-width: 768px) {
-  .card-list {
-    padding: 0 40px 0;
-  }
   .card-list__header {
     font-size: 30px;
     line-height: 34px;
     margin: 40px 0 0;
   }
   .card-list__container {
-    grid-row-gap: 8px;
-    grid-column-gap: 8px;
+    gap: 8px;
     margin: 32px 0;
+    grid: 420px / repeat(auto-fill, 224px);
   }
-  .card-list__show-button {
-    min-width: 240px;
-    min-height: 56px;
+  .card-list__button {
+    width: 240px;
+    height: 56px;
     margin: 0 auto 40px;
   }
 }
-@media screen and (max-width: 680px) {
-  .card-list__header {
-    margin: 32px 0 0;
-  }
-  .card-list__container {
-    grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 10px;
-    margin: 24px 0 15px;
-  }
-  .card-list__show-button {
-    min-width: 288px;
-    margin: 0 auto 32px;
-  }
-}
-@media screen and (max-width: 565px) {
+
+@media screen and (max-width: 660px) {
   .card-list {
-    padding: 0 120px 0;
-  }
-  .card-list__container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-@media screen and (max-width: 510px) {
-  .card-list {
-    padding: 0 90px 0;
-  }
-}
-@media screen and (max-width: 460px) {
-  .card-list {
-    padding: 0 60px 0;
-  }
-}
-@media screen and (max-width: 400px) {
-  .card-list {
-    padding: 0 40px 0;
-  }
-}
-@media screen and (max-width: 360px) {
-  .card-list {
-    padding: 0 16px 0;
+    grid: 440px / repeat(auto-fill, 288px);
   }
 }
