--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,28 +1,42 @@
-body {
+/* body {
 	margin: 0;
 	min-height: 100vh;
 	background-color: #333;
 	
 	overflow: hidden;
+} */
+.container {
+  padding: 80px 0 24px;
+  margin: auto;
+}
+.circle-preloader__text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  color: #B6BCBF;
 }
 
 .circle-preloader {
 	display: block;
-	width: 50px;
-	height: 50px;
+	/* width: 50px;
+  height: 50px; */
+  width: 74px;
+  height: 74px;
 	border: 4px solid #444;
 	border-bottom-color: #888;
-	
 	border-radius: 50%;
-	
-	position: absolute;
+	/* position: absolute; */
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	margin: auto;
-	
 	animation: spin .75s infinite linear;
+	/* margin: auto; */
+  /* border: 4px solid; */
+  /* border-image-source: conic-gradient(from 180deg at 50% 50%, #1A1B22 0deg, rgba(209, 210, 214, 0) 360deg); */
 }
 
 @keyframes spin {
