--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -88,9 +88,15 @@
   outline: none;
 }
 
+/* @media screen and (max-width: 760px){
+  .app {
+    padding: 56px 0 0;
+  }
+} */
 @media screen and (max-width: 760px) {
   .header__content{
-    padding: calc(56px + 30px) 0 ;
+    /* padding: 30px 0 32px; */
+    padding: calc(56px + 30px) 0 32px;
   }
   .header__title{
     font-family: Roboto Slab;
@@ -123,5 +129,12 @@
     width: 100%;
     height: 56px;
     border-radius: 100px;
+  }
+}
+
+
+@media screen and (max-width: 330px) {
+  .header__caption{
+    padding: 0 0 105px;
   }
 }
