--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -143,18 +143,18 @@
   margin: 10px 24px 24px;
 }
 @media screen and (max-width: 1020px) {
-  .card__image {
+  /* .card__image {
     height: 150px;
-  }
+  } */
   .card__heading {
     -webkit-line-clamp: 2;
   }
   .card__description {
     -webkit-line-clamp: 3;
   }
-  .card__text {
+  /* .card__text {
     min-height: 180px;
-  }
+  } */
 }
 
 @media screen and (max-width: 768px) {
