--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,14 +1,8 @@
-/* body {
-	margin: 0;
-	min-height: 100vh;
-	background-color: #333;
-	
-	overflow: hidden;
-} */
 .container {
   padding: 80px 0 24px;
   margin: auto;
 }
+
 .circle-preloader__text {
   font-family: Roboto;
   font-style: normal;
@@ -21,22 +15,16 @@
 
 .circle-preloader {
 	display: block;
-	/* width: 50px;
-  height: 50px; */
   width: 74px;
   height: 74px;
-	border: 4px solid #444;
-	border-bottom-color: #888;
+	border: 2px solid rgba(68, 68, 68, 0.726);
+	border-bottom-color: rgb(182, 182, 182);
 	border-radius: 50%;
-	/* position: absolute; */
-	top: 0;
+	top: 1;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	animation: spin .75s infinite linear;
-	/* margin: auto; */
-  /* border: 4px solid; */
-  /* border-image-source: conic-gradient(from 180deg at 50% 50%, #1A1B22 0deg, rgba(209, 210, 214, 0) 360deg); */
 }
 
 @keyframes spin {
