--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -45,7 +45,7 @@
   font-size: 16px;
   line-height: 22px;
   border-radius: 1000px;
-  /* z-index: 1; */
+  z-index: 1;
   /* это для фокуса инпута */
 }
 .search-form__input {
@@ -63,13 +63,15 @@
   outline: none;
 }
 .search-form__label {
-  height: 64px;
+  height: 74px;
   position: absolute;
+  top: -4px;
+  left: -4px;
   display: block;
   line-height: 30px;
   width: calc(100%);
   border-radius: 100px;
-  z-index: -1;
+   z-index: -1; /*это чтобы нажимался инпут */
 }
 .search-form__input:focus ~ .search-form__label {
   border: 4px solid #2f71e5;
